# mongoterm

./: .gitignore  Cargo.toml  README.md  config.json.example  gallery.60
src/: main.rs  shared.rs
src/app/: aggregate.rs  count.rs  create.rs  delete_many.rs  delete_one.rs  find_many.rs  find_one.rs  list_databases.rs  mod.rs
